[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k3down2"
version = "0.1.22"
description = "Convert markdown segments into images and other transferable media"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Zhang Yanpo", email = "drdr.xp@gmail.com" }
]
keywords = ["markdown", "convert", "image", "pandoc", "graphviz", "mermaid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pylatexenc",
    "k3proc",
]

[project.urls]
Homepage = "https://github.com/pykit3/k3down2"
Documentation = "https://k3down2.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
    "coverage",
    "k3ut",
    "scikit-image",
]
publish = [
    "build",
    "twine",
    "pk3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools]
packages = ["k3down2"]

[tool.setuptools.package-dir]
k3down2 = "."

[tool.ruff]
line-length = 120
